# humanoid_robots_shenzhen

./: .gitignore  README.md  debug_pointcloud_1760439901.npz  grasp_point_extract.py  grounding_dino_processor.py  main.py  pyproject.toml  realsense_system.py  takeout_bag.pcd  visualize_pointcloud.py
scripts/: record_realsense_video.py
src/grasp_pose_estimation/: package.xml  setup.cfg  setup.py
src/grasp_pose_estimation/grasp_pose_estimation/: ImageToPose_srv.py  YOLO_based_edge_estimation_node copy.py  YOLO_based_edge_estimation_node.py  YOLO_based_handle_estimation_node.py  YOLO_edge_or_handle_srv.py  grasp_pose_estimation_node.py  grasp_pose_estimation_origin.py  grasp_pose_estimator.py  groundedSAM_based_edge_estimation_node.py  groundedSAM_based_handle_estimation_node.py  grounding_dino_processor.py  handle_YOLO_based_edge_estimation_node.py  handle_grasp_pose_estimation.py  handle_groundedSAM_based_edge_estimation_node.py  image_to_grasp_client.py  test_for_grasp_pose.py  test_for_handle_grasp_pose.py
src/grasp_pose_estimation/launch/: grasp_pose_estimation.launch.py  groundedSAM_based_edge_estimation.launch.py  handle_grasp_pose_estimation.launch.py  image_to_grasp.launch.py  image_to_grasp_client.launch.py  yolo_based_edge_estimation.launch.py  yolo_edge_or_handle.launch.py
src/image_to_grasp/: CMakeLists.txt  package.xml
src/image_to_grasp/srv/: ImageToGrasp.srv
