<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp_pose_estimation</name>
  <version>0.0.0</version>
  <description>处理RGB和深度图像并返回抓取位姿的服务包</description>
  <maintainer email="rog@todo.todo">rog</maintainer>
  <license>TODO: License declaration</license>

  <depend>sensor_msgs</depend>  
  <depend>geometry_msgs</depend> 
  <depend>rclpy</depend> 
  <depend>cv_bridge</depend>  

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>image_to_grasp</exec_depend>     
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend> 

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
